# stellaros

./: .gitignore  .vscode-ctags  Cargo.toml  LICENSE  Makefile  README.md  README.txt  build_kernel.sh  dump.cmd  qemu-run-raspi4b.sh  qemu-run-virt.sh  qemu-run.sh
.cargo/: config.toml
c/: Makefile
c/include/: interrupt.h  io_virt.h  kernel.h  shell.h
c/src/: interrupt.c  io.c  io_virt.c
c/src/asm/: boot.s  irqentry.s  link.ld
docs/: note.md
dtb/: virt.dtb
include/: gic.h  interrupt.h  io.h  io_virt.h  kernel.h  version.h
src/: gdt.rs  gic.c  interrupt.c  interrupts.rs  io.c  io_virt.c  irq.c  kernel.c  lib.rs  main.rs  memory.rs  shell.c  vga_buffer.rs
src/asm/: boot.s  irqentry.s  link.ld
stellaros-aarch64/: Cargo.toml  Makefile
stellaros-aarch64/src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  shell.rs  synchronization.rs  timer.rs
stellaros-aarch64/src/_arch/aarch64/: cpu.rs  timer.rs
stellaros-aarch64/src/_arch/aarch64/cpu/: boot.rs  boot.s
stellaros-aarch64/src/bsp/: raspberrypi.rs
stellaros-aarch64/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
stellaros-aarch64/src/bsp/raspberrypi/: console.rs  driver.rs  kernel.ld  memory.rs
stellaros-aarch64/src/console/: null_console.rs
tests/: basic_boot.rs  stack_overflow.rs
utils/: color.sh
