[package]
name = "stellaros"
version = "0.1.0"
authors = ["wheatfox <enkerewpo@hotmail.com>"]
edition = "2021"

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies]
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
