[package]
name = "stellaros"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "stellaros-kernel-aarch64"
path = "src/main.rs"

[dependencies]


# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }